--- a/.env
+++ b/.env
@@ -4,7 +4,9 @@ PORT=5048
 
 # DATABASE INFO
 
-MONGO_URI=mongodb://169.47.198.147/smartoff
+MONGO_URI1=mongodb://169.47.198.147/smartoff
+MONGO_URI=mongodb://localhost:27017/smartoff
+
 # JWT SECRETS
 JWT_SECRET=abcadshasdasdsadj23123jh
 
